--- a/Client/src/css/clientStyle.css
+++ b/Client/src/css/clientStyle.css
@@ -240,16 +240,11 @@ input {
 
 .problem {
     display: none;
-    /* 처음엔 모든 문제는 숨겨짐 */
-    text-align: center;
 }
 
-
-.submit-btn {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+.problem-container
+{
+    text-align: left;
 }
 
 .contentsProblem {
@@ -259,4 +254,50 @@ input {
     height: 100vh;
     margin: 0;
     flex-direction: column;
+}
+
+.dandap {
+    width: 100%;
+    height: 30px;
+    font-size: 18px;
+    background-color: #8b8b8b1c;
+    resize: none;
+    color: black;
+    border: none;
+    border-bottom: 2px solid #0000007e;
+    outline: none;
+    font-family: Nunito;
+}
+
+.ccode {
+    width: 100%;
+    height: auto;
+    font-size: 18px;
+    background-color: #8b8b8b1c;
+    resize: none;
+    color: black;
+    border: none;
+    border-bottom: 2px solid #0000007e;
+    outline: none;
+}
+
+.submit-btn {
+    background-color: #5d85ce;
+    border-radius: 8px;
+    color: #ffffff;
+    padding: 10px;
+    border: 0px;
+    float: right;
+}
+
+.submit-btn:hover {
+    filter: brightness(90%);
+    cursor: pointer;
+}
+
+
+h5
+{
+    margin: 0px;
+    padding: 0px;
 }
