--- a/Client/src/css/clientStyle.css
+++ b/Client/src/css/clientStyle.css
@@ -325,6 +325,7 @@ h5 {
     font-family: Consolas, monospace;
     font-size: 14px;
     padding-left: 0;
+    border-radius: 8px;
 }
 
 .CodeMirror-lines {
